--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,minimum-scale=1">
-		<title>Login</title>
+		<title>Angel Shot Community</title>
 		<!-- the form awesome library is used to add icons to our form -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <!-- include the stylesheet file -->
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="login">
-			<h1>Login</h1>
+			<h1>Player Login</h1>
 			<form action="/auth" method="post">
 				<label for="username">
 					<!-- font awesome icon -->
