--- a/game_select.html
+++ b/game_select.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='game_select.css'>
+  <link rel='stylesheet' href='static/style.css'>
   <title>Document</title>
 </head>
-<body>
-  <div class='game-select'>
+<body class='game-select'>
     <header>
       <h1>Select A Game</h1>
       <h2>Don't worry, you can always add more later.</h2>
@@ -16,23 +15,31 @@
     </header>
     <div class='grid'>
       <button type='button' class='game card'>
-        <p>League of Legends</p>
+        <img src='img/logos/league_of_legends.png' class='logo'>
       </button>
-      <div class='game card'>
-        <p>Valorant</p>
-      </div>
-      <div class='game card'>
-        <p>Overwatch</p>
-      </div>
-      <div class='game card'>
-        <p>Minecraft</p>
-      </div>
-      <div class='game card'>
-        <p>Destiny</p>
-      </div>
-   </div>
-
-  </content
-  
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
+      <button type='button' class='game card'>
+        <img src='img/logos/league_of_legends.png' class='logo'>
+      </button>
 </body>
 </html>
