Fixed second page of website

--- a/game_select.html
+++ b/game_select.html
@@ -15,31 +15,31 @@
     </header>
     <div class='grid'>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
       <button type='button' class='game card'>
-        <img src='img/logos/league_of_legends.png' class='logo'>
+        <img src='/league_of_legends.png' class='logo'>
       </button>
 </body>
 </html>
