Working on third page

--- a/game_select.html
+++ b/game_select.html
@@ -13,6 +13,7 @@
       <h2>Don't worry, you can always add more later.</h2>
       <input type='text' class='search'>
     </header>
+    <form action="/check" method="post">
     <div class='grid'>
       <button type='button' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
@@ -41,5 +42,7 @@
       <button type='button' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
+    </div> 
+  </form>
 </body>
 </html>
