Update third page

--- a/game_select.html
+++ b/game_select.html
@@ -15,31 +15,31 @@
     </header>
     <form action="/check" method="post">
     <div class='grid'>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
-      <button type='button' class='game card'>
+      <button type='submit' class='game card'>
         <img src='/league_of_legends.png' class='logo'>
       </button>
     </div> 
