Add match names feature

--- a/match.html
+++ b/match.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='stylesheet' href='static/match.css'>
   <script src='script.js'></script>
-  <title>Document</title>
+  <title>Angel Shot</title>
 </head>
 <body>
+  <form action="/GameName" method="get">
   <table class='table1'>
     <thead id='thead1'>
       <th>Team 1</th>
@@ -22,5 +23,6 @@
       <th>Team 2</th>
     </thead>
   </table>
+  </form>
 </body>
 </html>
