--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="login">
-			<h1>Player Login</h1>
+			<h1>Welcome to Angel Shot</h1>
 			<form action="/auth" method="post">
 				<label for="username">
 					<!-- font awesome icon -->
