--- a/match.html
+++ b/match.html
@@ -1,40 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login Page</title>
-    </head>
-    <body>
-        <h1>Login Page</h1>
-        <form action="/auth" method="post">
-            <label for="username">Username: </label>
-            <input type="text" id="username" name="username" required><br><br>
-            <label for="password">Password: </label>
-            <input type="password" id="password" name="password" required><br><br>
-            <input type="submit" value="Submit">
-        </form>
-    </body>
-</html>
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Home Page</title>
-    </head>
-    <body>
-        <h1>Home Page</h1>
-        <form action="/check" method="post">
-            <input type="submit" value="Enter Game Lobby">
-        </form>
-    </body>
-</html>
-
-<!DOCTYPE html>
-<html>
-    <head>
         <title>Match Page</title>
     </head>
     <body>
+      <form action="/GameName" method="get">
         <h1>Match Page</h1>
         <div id="playerList"></div>
+        </form>
     </body>
 </html>
