--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 		<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"> -->
 		<!-- include the stylesheet file -->
 		<!-- <link href="/style.css" rel="stylesheet" type="text/css"> -->
-		<link rel='stylesheet' href='static/login.css'>
+		<link rel='stylesheet' href='/login.css'>
 	</head>
 	<body>
 		<div class="login">
