--- a/match.html
+++ b/match.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Match Page</title>
-    </head>
-    <body>
-      <form action="/GameName" method="get">
-        <h1>Match Page</h1>
-        <div id="playerList"></div>
-        </form>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='static/match.css'>
+    <title>Angel Shot</title>
+</head>
+<body>
+    <h1>Angel Shot members in your lobby:</h1>
+    <ul id="playerList">
+    </ul>
+</body>
 </html>
